# Client

./: CMakeLists.txt  Client.cpp  Client.hpp  ClientNetwork.cpp  ClientNetwork.hpp  Encryption.cpp  Encryption.hpp  Interface.cpp  Interface.hpp  README.md  main.cpp
dependencies/: CMakeLists.txt
dependencies/openssl-cmake/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
